<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25sp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@android:color/black"
            android:hint="@string/text_tvHeadingLogin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText android:id="@+id/etLogin"
                style="@style/styleEditText"
                android:hint="@string/hint_etLogin"/>

            <EditText android:id="@+id/etPasswordLogin"
                style="@style/styleEditText"
                android:hint="@string/hint_etPassword"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="13dp">

                <RadioButton android:id="@+id/rbClientLogin"
                    style = "@style/styleRadioButton"
                    android:checked="true"
                    android:hint="@string/hint_rbClient"/>

                <RadioButton android:id="@+id/rbCustomerLogin"
                    style = "@style/styleRadioButton"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/hint_rbCustomer"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button android:id="@+id/btnLogin"
                style="@style/styleButton"
                android:background="@drawable/button"
                android:hint="@string/hint_btnLogin"/>

            <Button android:id="@+id/btnRegistration"
                style = "@style/styleButton"
                android:background="@drawable/button"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_btnRegistration"
                android:onClick="openRegistrationActivity"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>