<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="70dp"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColorHint="@android:color/black"
            android:hint="@string/text_tvHeading"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText android:id="@+id/etLogin"
                style="@style/styleEditText"
                android:hint="@string/hint_etLogin"/>

            <EditText android:id="@+id/etPassword"
                style="@style/styleEditText"
                android:hint="@string/hint_etPassword"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/rbClient"
                    style = "@style/styleRadioButton"
                    android:hint="@string/hint_rbClient"/>

                <RadioButton android:id="@+id/rbCustomer"
                    style = "@style/styleRadioButton"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/hint_rbCustomer"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button android:id="@+id/btnLogin"
                style = "@style/styleButton"
                android:hint="@string/hint_btnLogin"/>

            <Button android:id="@+id/btnRegistration"
                style = "@style/styleButton"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_btnRegistration"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>