<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeadingReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:hint="@string/text_tvHeadingReg"
            android:textColorHint="@android:color/black"
            android:textSize="25sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="30dp"
                android:paddingBottom="90dp">

                <EditText android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_etName"
                    android:inputType="textPersonName"
                    android:lines="1"/>

                <EditText android:id="@+id/etPasswordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_etPassword"
                    android:inputType="textPassword"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="13dp">

                    <RadioButton android:id="@+id/rbClientReg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:hint="@string/hint_rbClient"/>

                    <RadioButton android:id="@+id/rbCustomerReg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:hint="@string/hint_rbCustomer"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <TextView android:id="@+id/tvQuestion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:textSize="16sp"
                            android:textAlignment="viewStart"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:textColorHint="@android:color/black"
                            android:hint="@string/text_tvQuestion"/>
                    </RelativeLayout>

                        <RadioGroup
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="end">

                            <RadioButton android:id="@+id/rbYes"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:checked="true"
                                android:hint="@string/hint_rbYes"/>

                            <RadioButton android:id="@+id/rbNo"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="15dp"
                                android:hint="@string/hint_rbNo"/>
                        </RadioGroup>
                </LinearLayout>

                <EditText android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:minLines="3"
                    android:gravity="start"
                    android:hint="@string/hint_etAddress"
                    android:inputType="textMultiLine"/>

                <TextView android:id="@+id/tvUserAgrHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:textSize="20sp"
                    android:textColorHint="@android:color/black"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_tvUserAgrHeading"/>

                <TextView android:id="@+id/tvUserAgr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/text_tvUserAgr"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColorHint="@android:color/black"
                    android:checked="true"
                    android:hint="@string/hint_rbAgree"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/hint_btnDone"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:onClick="closeRegistrationActivity"/>
</FrameLayout>